--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-linear-gradient": "~9.1.0",
+    "expo-notifications": "~0.11.6",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
