--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
+    "expo-facebook": "~11.0.5",
     "expo-linear-gradient": "~9.1.0",
     "expo-notifications": "~0.11.6",
     "expo-status-bar": "~1.0.4",
