--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-facebook": "~11.0.5",
     "expo-linear-gradient": "~9.1.0",
     "expo-notifications": "~0.11.6",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
